--- a/source/client/index.html
+++ b/source/client/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>NodeJS Wallet App</title>
+  <link rel="stylesheet" href="../../build/styles.css">
 </head>
 <body>
   <script src="../../build/bundle.js"></script>
