--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="shortcut icon" href="./favicon.ico">
+    <link rel="stylesheet" href="./styles.css">
 		<title>Hello, Node School App!</title>
 	</head>
 	<body>
