--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 	</head>
 	<body>
 		<div id="root"></div>
-		<script src="./bundle.js"></script>
+		<script src="./bundle.client.js"></script>
 	</body>
 </html>
